@@ -73,8 +73,9 @@ from generalization import GeneralizationItem
 from implementation import ImplementationItem
 from association import AssociationItem
 from extension import ExtensionItem
-from activitynodes import InitialNodeItem, ActivityFinalNodeItem, FlowFinalNodeItem, DecisionNodeItem, ForkNodeItem, ObjectNodeItem
+from activitynodes import InitialNodeItem, ActivityFinalNodeItem, FlowFinalNodeItem, DecisionNodeItem, ForkNodeItem
 from action import ActionItem
+from objectnode import ObjectNodeItem
 from flow import FlowItem
 from component import ComponentItem
 #from connector import ConnectorItem
